--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Niccolò Olivieri Achille <n.olivieriachille@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint . --ext .js,.ts"
+    "lint": "eslint . --ext .js,.ts --fix",
+    "format": "prettier --write \"**/*.{js,ts,json,md,yml}\" \".editorconfig\" \"LICENSE\""
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -20,6 +21,7 @@
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-plugin-import": "2.22.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   },
