--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,18 @@
 {
   "compilerOptions": {
-    "lib": ["es2017"],
+    "esModuleInterop": true,
+    "lib": ["es2019"],
     "removeComments": true,
     "moduleResolution": "node",
+    "module": "commonjs",
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es2017",
-    "outDir": "lib"
+    "outDir": "dist/"
   },
   "include": ["./**/*.ts"],
   "exclude": [
     "node_modules/**/*",
-    ".serverless/**/*",
-    ".webpack/**/*",
-    "_warmup/**/*",
-    ".vscode/**/*"
   ]
 }
