--- a/.prettierrc
+++ b/.prettierrc
@@ -8,13 +8,5 @@
   "jsxSingleQuote": false,
   "trailingComma": "all",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "always",
-  "overrides": [{
-    "files": ".editorconfig",
-    "options": { "parser": "yaml" }
-  }, {
-    "files": "LICENSE",
-    "options": { "parser": "markdown" }
-  }]
+  "arrowParens": "always"
 }
