--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,3 @@
 {
-  "compilerOptions": {
-    "esModuleInterop": true,
-    "lib": ["es2019"],
-    "removeComments": true,
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "sourceMap": true,
-    "target": "es2017",
-    "outDir": "dist/"
-  },
-  "include": ["./**/*.ts"],
-  "exclude": [
-    "node_modules/**/*",
-  ]
+  "extends": "@tsconfig/node22/tsconfig.json"
 }
