--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier . -w",
     "check": "npm run lint && npm run format",
     "test": "jest",
+    "test:debug": "jest --runInBand",
     "build": "tsc"
   },
   "dependencies": {
