--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "manga-scraper",
+  "name": "@zweer/manga-scraper",
   "version": "0.0.1",
   "description": "A collection of scrapers for manga websites",
   "main": "index.js",
