--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "check": "npm run lint && npm run format",
     "test": "jest",
     "test:debug": "jest --runInBand",
+    "clean": "rimraf --glob ./{lib,tests}/**/*.{d.ts,js}",
+    "prebuild": "npm run clean",
     "build": "tsc"
   },
   "publishConfig": {
@@ -56,6 +58,7 @@
     "ls-engines": "^0.9.3",
     "prettier": "^3.4.2",
     "publint": "^0.3.2",
+    "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
