--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - run: corepack npm audit signatures
 
-      - run: npx semantic-release
+      - run: npm run release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
