style: :rotating_light: Fixed with prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-    "conventionalCommits.scopes": [
-        "manga-park",
-        "omega-scans"
-    ]
+  "conventionalCommits.scopes": ["manga-park", "omega-scans"]
 }
