fix: :white_check_mark: Not using the global vitest methods

--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "lint": "concurrently npm:lint:* --prefixColors auto",
     "check": "npm run lint && npm run format",
     "test": "vitest run",
-    "test:watch": "vitest",
-    "test:debug": "vitest run --inspect-brk --threads false",
-    "coverage": "vitest run --coverage",
+    "test:coverage": "vitest run --coverage",
     "clean": "rimraf --glob ./{lib,tests}/**/*.{d.ts,js}",
     "prebuild": "npm run clean",
     "build": "tsc",
